# design-patterns

./: CMakeLists.txt  README.md  build.sh  run.sh
abstract-factory/: abstract-factory.cpp  abstract-factory.hpp  main.cpp
adapter/: adapter.cpp  adapter.hpp  main.cpp
command/: command.cpp  command.hpp  main.cpp
composite/: composite.cpp  composite.hpp  main.cpp
decorator/: decorator.cpp  decorator.hpp  main.cpp
facade/: facade.cpp  facade.hpp  main.cpp
factory-method/: factory-method.cpp  factory-method.hpp  main.cpp
iterator/: iterator.cpp  iterator.hpp  main.cpp
observer/: main.cpp  observer.cpp  observer.hpp
proxy/: main.cpp  proxy.cpp  proxy.hpp
state/: main.cpp  state.cpp  state.hpp
strategy/: main.cpp  strategy.cpp  strategy.hpp
template-method/: main.cpp  template-method.cpp  template-method.hpp
visitor/: main.cpp
